--- a/catalogue.html
+++ b/catalogue.html
@@ -85,6 +85,12 @@
 
             </div>
         </div>
+        <div class="catalogue-title">
+            <h3>Air Force</h3>
+            <div class="container" id="air-force">
+
+            </div>
+        </div>
     </div>
     <br>
     <br>
@@ -197,6 +203,7 @@
     // Display both collections
     displayCollection("Air Jordans", "air-jordans");
     displayCollection("Converse", "converse");
+    displayCollection("Air Force", "air-force");
 
 
 </script>
