Google location and landing page update

--- a/catalogue.html
+++ b/catalogue.html
@@ -22,20 +22,14 @@
                 <a href="" class="logo">Kicks.Co</a>
                 <nav class="navbar">
                     <ul>
-                        <li><a href="">Home <i class="fa fa-angle-down"></i></a>
-                            <ul>
-                                <li><a href="">Subnav1</a></li>
-                                <li><a href="">Subnav2</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="index.html">Home</i></a></li>
                         <li><a href="">Catalogue <i class="fa fa-angle-down"></i></a>
                             <ul>
-                                <li><a href="">Air Jordans</a></li>
-                                <li><a href="">Converse</a></li>
-                                <li><a href="">Subnav3</a></li>
+                                <li><a href="#air_jordans">Air Jordans</a></li>
+                                <li><a href="#con_verse">Converse</a></li>
+                                <li><a href="#air_force">Air Force</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Nav3</a></li>
                         <li><a href="">Nav4 <i class="fa fa-angle-down"></i></a>
                             <ul>
                                 <li><a href="">Subnav1</a></li>
@@ -57,6 +51,7 @@
                                 <li><a href="">Subnav4</a></li>
                             </ul>
                         </li>
+                        <li><a href="location.html">Find Us</a></li>
                         <li><a href="">Blog Post</a></li>
                     </ul>
                 </nav>
@@ -72,15 +67,15 @@
         <h1 class="gradient-text">Catalogue</h1><br>
         <img src="Images/adgif.gif" alt="" class="ad">
         <div class="catalogue-title">
-            <h3>Air Jordans</h3>
+            <h3 id="air_jordans">Air Jordans</h3>
             <div class="container" id="air-jordans"></div>
         </div>
         <div class="catalogue-title">
-            <h3>Converse</h3>
+            <h3 id="con_verse">Converse</h3>
             <div class="container" id="converse"></div>
         </div>
         <div class="catalogue-title">
-            <h3>Air Force</h3>
+            <h3 id="air_force">Air Force</h3>
             <div class="container" id="air-force"></div>
         </div>
     </div>
