--- a/location.html
+++ b/location.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kicks.Co || Home</title>
+    <title>Kicks.Co || Find Us</title>
     <link rel="icon" type="image/x-icon" href="Images/logo.jpeg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -24,7 +24,7 @@
                 <a href="" class="logo">Kicks.Co</a>
                 <nav class="navbar">
                     <ul>
-                        <li><a href="">Home</i></a></li>
+                        <li><a href="index.html">Home</i></a></li>
                         <li><a href="catalogue.html">Catalogue <i class="fa fa-angle-down"></i></a>
                             <ul>
                                 <li><a href="catalogue.html#air_jordans">Air Jordans</a></li>
@@ -65,53 +65,14 @@
             </header>
         </div>
     </div>
-    <div class="img-body">
-        <h1>Step Up Your Style with the Latest Sneaker Drops at Kicks.Co!</h1><br>
-        <p>From Classic Retro Kicks to the Newest High-Tech Trainers, We've Got Your Perfect Pair.<br> Browse Our
-            Exclusive Collection and Find Your Sole Match Today!</p><br>
-        <a class="hero-btn" href="catalogue.html">Visit our Catalogue →</a>
+    <h1 class="gradient-text" style="padding: 30px;">Find Us</h1><br>
+    <h3 style="margin-left: 40px;">Our Location</h3>
+    <div class="loc-map">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3989.0020071324125!2d36.959948073711935!3d-1.1590358988298726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2ske!4v1720872081585!5m2!1sen!2ske"
+            width="1200" height="350" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <footer>
         <div class="f-container">
             <div class="f-row">
@@ -163,6 +124,5 @@
         </div>
     </footer>
 </body>
-<script src="index.js"></script>
 
 </html>
